objects/Account_Next_Step__c/Account_Next_Step__c.object-meta.xml
<CustomObject>
    <label>Account Next Step</label>
    <nameField>
        <displayFormat>NS-{00000000}</displayFormat>
        <label>Account Next Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Next Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>