objects/Account_Next_Step__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Next Steps</relationshipLabel>
    <relationshipName>Account_Next_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>