objects/Account_Next_Step__c/fields/Account_Activity_Digest__c.field-meta.xml
<CustomField>
    <fullName>Account_Activity_Digest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account Activity Digest that spawned this next step.</description>
    <label>Account Activity Digest</label>
    <referenceTo>Account_Activity_Digest__c</referenceTo>
    <relationshipLabel>Account Next Steps</relationshipLabel>
    <relationshipName>Account_Next_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>