objects/Account_Next_Step__c/fields/Alliance_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Next_Steps__c</fullName>
    <label>Alliance Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>