objects/Account_Next_Step__c/fields/CSM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CSM_Start_Date__c</fullName>
    <label>CSM Start Date</label>
    <type>Date</type>
</CustomField>