objects/Account_Next_Step__c/fields/Owner_TBD__c.field-meta.xml
<CustomField>
    <fullName>Owner_TBD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPRECATED - Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Next_Steps1</relationshipName>
    <type>Lookup</type>
</CustomField>