objects/Account_Next_Step__c/fields/TAM_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>TAM_Next_Steps__c</fullName>
    <description>Renamed to Next Steps so this field can be used by CSMs and TAMs and Alliance</description>
    <label>Next Steps</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>