objects/Account_Next_Step__c/fields/TAM_Owner__c.field-meta.xml
<CustomField>
    <fullName>TAM_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAM Owner (old)</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <value>00132000019soMf</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Next Steps</relationshipLabel>
    <relationshipName>Account_Next_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>