objects/Account_Next_Step__c/fields/TAM_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>TAM_Owner_Name__c</fullName>
    <formula>TAM_Owner__r.FirstName &amp; &quot; &quot; &amp; TAM_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAM Owner Name</label>
    <type>Text</type>
</CustomField>