objects/Account_Next_Step__c/fields/TAM_Owner_User__c.field-meta.xml
<CustomField>
    <fullName>TAM_Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAM Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Next_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>