objects/Account_Next_Step__c/fields/techtools_id__c.field-meta.xml
<CustomField>
    <fullName>techtools_id__c</fullName>
    <description>This is a surrogate key we&apos;re creating now based on account id, date for the CAD, and the datetime last updated in Tech Tools</description>
    <label>techtools_id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>