objects/Account_Next_Step__c/recordTypes/Alliance_Next_Step.recordType-meta.xml
<RecordType>
    <fullName>Alliance_Next_Step</fullName>
    <active>true</active>
    <description>Alliance Next Step</description>
    <label>Alliance Next Step</label>
</RecordType>