objects/Account_Next_Step__c/recordTypes/CSM_Next_Steps.recordType-meta.xml
<RecordType>
    <fullName>CSM_Next_Steps</fullName>
    <active>true</active>
    <description>For CSM Team to track CSM Ownership History</description>
    <label>CSM Next Steps</label>
</RecordType>