objects/Account_Next_Step__c/recordTypes/TAM_Next_Step.recordType-meta.xml
<RecordType>
    <fullName>TAM_Next_Step</fullName>
    <active>true</active>
    <label>TAM Next Step</label>
</RecordType>