objects/Account_Next_Step__c/listViews/CSM_Next_Steps.listView-meta.xml
<ListView>
    <fullName>CSM_Next_Steps</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>TAM_Next_Steps__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>End_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account_Next_Step__c.CSM_Next_Steps</value>
    </filters>
    <label>CSM Next Steps</label>
</ListView>